# dummy_cc_toolchain

./: WORKSPACE
main/: BUILD.bazel  foo.bzl  hello-world.cc
toolchains/dummy/: BUILD.bazel  cc_toolchain_config.bzl
