load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load(":cc_toolchain_config.bzl", "dummy_cc_toolchain_config")

dummy_cc_toolchain_config(
    name = "toolchain_config",
)

filegroup(
    name = "empty",
)

cc_toolchain(
    name = "dummy_cc_toolchain",
    all_files = ":empty",
    ar_files = ":empty",
    as_files = ":empty",
    compiler_files = ":empty",
    coverage_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":toolchain_config",
)

constraint_value(
    name = "dummy",
    constraint_setting = "@platforms//cpu",
)

toolchain(
    name = "default_toolchain",
    target_compatible_with = [
        ":dummy",
    ],
    toolchain = ":dummy_cc_toolchain",
    toolchain_type = "@rules_cc//cc:toolchain_type",
)
